# varnavinyas

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  deny.toml  pyproject.toml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  linguistic_issue.yml
.github/workflows/: ci.yml  pages.yml
crates/akshar/: Cargo.toml  README.md
crates/akshar/src/: consonant.rs  devanagari.rs  lib.rs  normalize.rs  syllable.rs  vowel.rs
crates/akshar/tests/: classification.rs  gold.rs
crates/bindings-c/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/bindings-c/src/: lib.rs
crates/bindings-python/: Cargo.toml  README.md  pyproject.toml
crates/bindings-python/src/: lib.rs  py_akshar.rs  py_kosha.rs  py_lekhya.rs  py_lipi.rs  py_parikshak.rs  py_prakriya.rs  py_sandhi.rs  py_shabda.rs
crates/bindings-uniffi/: Cargo.toml  README.md
crates/bindings-uniffi/src/: lib.rs
crates/bindings-wasm/: Cargo.toml  README.md
crates/bindings-wasm/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cmd_akshar.rs  cmd_check.rs  cmd_lipi.rs  main.rs
crates/cli/tests/: cli_tests.rs
crates/eval/: Cargo.toml  README.md
crates/eval/src/: main.rs
crates/eval/tests/: grammar_eval.rs  morph_eval.rs  samasa_eval.rs  sandhi_eval.rs
crates/kosha/: Cargo.toml  README.md
crates/kosha/benches/: lookup.rs
crates/kosha/src/: builder.rs  kosha.rs  lib.rs  origin_tag.rs
crates/kosha/tests/: lookup.rs
crates/lekhya/: Cargo.toml  README.md
crates/lekhya/src/: lib.rs  punctuation.rs
crates/lekhya/tests/: punctuation.rs
crates/lipi/: Cargo.toml  README.md
crates/lipi/src/: legacy.rs  lib.rs  mapping.rs  scheme.rs
crates/lipi/tests/: roundtrip.rs
crates/lsp/: Cargo.toml  README.md
crates/lsp/src/: backend.rs  config.rs  convert.rs  main.rs
crates/parikshak/: Cargo.toml  README.md
crates/parikshak/benches/: checker.rs
crates/parikshak/src/: checker.rs  diagnostic.rs  lib.rs  tokenizer.rs
crates/parikshak/tests/: checker.rs  gold.rs  grammar.rs  rules_override_lexicon.rs
crates/prakriya/: Cargo.toml  README.md
crates/prakriya/benches/: derive.rs
crates/prakriya/src/: analysis.rs  correction_table.rs  engine.rs  hrasva_dirgha.rs  lib.rs  orthographic.rs  prakriya.rs  rule.rs  rule_spec.rs  step.rs  structural.rs
crates/prakriya/tests/: derive_tests.rs  derive_tests_bv.rs  gold.rs  notices_alignment.rs  terminology_guard.rs
crates/samasa/: Cargo.toml
crates/samasa/src/: lib.rs
crates/samasa/tests/: smoke.rs
crates/sandhi/: Cargo.toml  README.md
crates/sandhi/src/: consonant_sandhi.rs  lib.rs  split.rs  visarga_sandhi.rs  vowel_sandhi.rs
crates/sandhi/tests/: academy_regressions.rs  sandhi_tests.rs
crates/shabda/: Cargo.toml  README.md
crates/shabda/src/: lib.rs  morphology.rs  origin.rs  tables.rs
crates/shabda/tests/: classification.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/types/tests/: origin_labels.rs
crates/vyakaran/: Cargo.toml  README.md
crates/vyakaran/src/: lib.rs
crates/vyakaran/tests/: mvp.rs
data/: headwords.tsv  words.txt
docs/: ARCHITECTURE.md  BACKLOG.md  DATASETS.md  DEVELOPMENT.md  Notices-pages-77-99.md  PRD.md  README.md  ROADMAP.md  RULES.md  RUST_GUIDE.md  STATUS.md  VISION.md  benchmarks.md  notices-gap-priority.md
docs/phases/: PHASE_0.md  PHASE_1.md  PHASE_2.md  PHASE_3_4.md
docs/tests/: ERROR_TRIAGE.md  gold.toml  grammar_sentences.toml  morph_gold.toml  needs_review.toml  samasa_gold.toml
editors/vscode/: language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
extensions/browser/: .gitignore  build.sh  manifest.json
extensions/browser/src/: background.js  content.js  popup.css  popup.html  popup.js  wasm-adapter.js
web/: README.md  build.sh  index.html  smoke-test.sh
web/css/: style.css
web/js/: app.js  checker.js  deriver.js  inspector.js  reference.js  rules-data.js  transliterator.js  utils.js  wasm-bridge.js
