[workspace]
resolver = "3"
members = [
    "crates/akshar",
    "crates/lipi",
    "crates/shabda",
    "crates/sandhi",
    "crates/prakriya",
    "crates/kosha",
    "crates/lekhya",
    "crates/parikshak",
    "crates/cli",
    "crates/lsp",
    "crates/bindings-python",
    "crates/bindings-wasm",
    "crates/bindings-uniffi",
    "crates/bindings-c",
]
# Exclude bindings (python/wasm) from default builds — they need special targets/tools
default-members = [
    "crates/akshar",
    "crates/lipi",
    "crates/shabda",
    "crates/sandhi",
    "crates/prakriya",
    "crates/kosha",
    "crates/lekhya",
    "crates/parikshak",
    "crates/cli",
    "crates/lsp",
]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/varnavinyas/varnavinyas"
description = "Nepali language orthography toolkit"

[workspace.dependencies]
# Core
clap = { version = "4", features = ["derive"] }
unicode-segmentation = "1.12"
unicode-normalization = "0.1"
thiserror = "2.0"
rustc-hash = "2.1"
fst = "0.4"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-lsp = { version = "0.20", features = ["proposed"] }
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }
wasm-bindgen = "0.2"
uniffi = "0.28"

# Dev
toml = "0.8"
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal
varnavinyas-akshar = { path = "crates/akshar" }
varnavinyas-lipi = { path = "crates/lipi" }
varnavinyas-shabda = { path = "crates/shabda" }
varnavinyas-sandhi = { path = "crates/sandhi" }
varnavinyas-prakriya = { path = "crates/prakriya" }
varnavinyas-kosha = { path = "crates/kosha" }
varnavinyas-lekhya = { path = "crates/lekhya" }
varnavinyas-parikshak = { path = "crates/parikshak" }
