[package]
name = "varnavinyas-bindings-c"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C ABI bindings for varnavinyas"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
varnavinyas-parikshak = { workspace = true }
varnavinyas-lipi = { workspace = true }
varnavinyas-shabda = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
