[package]
name = "varnavinyas-python"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python bindings for varnavinyas"

[lib]
name = "varnavinyas"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
varnavinyas-akshar = { workspace = true }
varnavinyas-lipi = { workspace = true }
varnavinyas-shabda = { workspace = true }
varnavinyas-sandhi = { workspace = true }
varnavinyas-prakriya = { workspace = true }
varnavinyas-kosha = { workspace = true }
varnavinyas-lekhya = { workspace = true }
varnavinyas-parikshak = { workspace = true, features = ["grammar-pass"] }

[build-dependencies]
pyo3-build-config = "0.24.1"
