[package]
name = "varnavinyas-bindings-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM bindings for varnavinyas"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
varnavinyas-akshar = { workspace = true }
varnavinyas-lipi = { workspace = true }
varnavinyas-prakriya = { workspace = true }
varnavinyas-sandhi = { workspace = true }
varnavinyas-shabda = { workspace = true, features = ["iterative-decompose"] }
varnavinyas-parikshak = { workspace = true, features = ["grammar-pass"] }
