[package]
name = "varnavinyas"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Nepali orthography toolkit — CLI"

[[bin]]
name = "varnavinyas"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
varnavinyas-akshar = { workspace = true }
varnavinyas-lipi = { workspace = true }
varnavinyas-parikshak = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
