[package]
name = "varnavinyas-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
varnavinyas-parikshak = { workspace = true }
varnavinyas-prakriya = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
colored = "2.0"
