[package]
name = "varnavinyas-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
varnavinyas-akshar = { workspace = true }
varnavinyas-kosha = { workspace = true }
varnavinyas-parikshak = { workspace = true }
varnavinyas-prakriya = { workspace = true }
varnavinyas-sandhi = { workspace = true }
varnavinyas-shabda = { workspace = true, features = ["iterative-decompose"] }
toml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
colored = "2.0"
