[package]
name = "varnavinyas-kosha"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FST-based Nepali lexicon for word validation and metadata lookup"

[dependencies]
fst = { workspace = true }
thiserror = { workspace = true }
varnavinyas-types = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
toml = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "lookup"
harness = false
