[package]
name = "varnavinyas-lsp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Nepali orthography toolkit — LSP server"

[[bin]]
name = "varnavinyas-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
varnavinyas-parikshak = { workspace = true }
varnavinyas-prakriya = { workspace = true }
