[package]
name = "varnavinyas-parikshak"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Nepali spell-check pipeline composing kosha, prakriya, and lekhya"

[features]
oblique-forms = []
nipat-tokenization = []
vocative-tokenization = []
grammar-pass = ["dep:varnavinyas-vyakaran", "dep:varnavinyas-samasa", "varnavinyas-vyakaran/vyakaran-mvp"]

[dependencies]
varnavinyas-akshar = { workspace = true }
varnavinyas-kosha = { workspace = true }
varnavinyas-prakriya = { workspace = true }
varnavinyas-lekhya = { workspace = true }
varnavinyas-vyakaran = { workspace = true, optional = true }
varnavinyas-samasa = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
toml = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "checker"
harness = false
