[package]
name = "varnavinyas-prakriya"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Derivation engine with step tracing and Academy rule citations"

[dependencies]
varnavinyas-akshar = { workspace = true }
varnavinyas-shabda = { workspace = true }
varnavinyas-sandhi = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
toml = { workspace = true }
