[package]
name = "varnavinyas-sandhi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sandhi (sound change) rules for Nepali morpheme combination"

[dependencies]
varnavinyas-akshar = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
toml = { workspace = true }
