[package]
name = "varnavinyas-shabda"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Word origin classification and morphological decomposition"

[dependencies]
varnavinyas-akshar = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
toml = { workspace = true }
