[package]
name = "varnavinyas-vyakaran"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Morphological analysis for Nepali"

[features]
vyakaran-mvp = ["dep:varnavinyas-kosha", "dep:varnavinyas-shabda"]

[dependencies]
thiserror = { workspace = true }
varnavinyas-kosha = { workspace = true, optional = true }
varnavinyas-shabda = { workspace = true, optional = true }
